--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
   	<modelVersion>4.0.0</modelVersion>
   	<groupId>tr.com.serkanozal</groupId>
   	<artifactId>jillegal-demo</artifactId>
-  	<version>1.0.1-RELEASE</version>
+  	<version>2.0</version>
     <name>Jillegal-Demo</name>
     <url>https://github.com/serkan-ozal/jillegal-demo</url>
      
@@ -11,14 +11,14 @@
         
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         
-        <source.compiler.version>1.6</source.compiler.version>
-        <target.compiler.version>1.6</target.compiler.version>
+        <source.compiler.version>1.8</source.compiler.version>
+        <target.compiler.version>1.8</target.compiler.version>
         
         <maven.compiler.plugin.version>2.3.2</maven.compiler.plugin.version>
         <maven.resources.plugin.version>2.4</maven.resources.plugin.version>
         <maven.surefire.plugin.version>2.9</maven.surefire.plugin.version>
         
-        <jillegal.version>1.0.6-RELEASE</jillegal.version> 
+        <jillegal.version>2.0-SNAPSHOT</jillegal.version> 
 
     </properties>
   
